--- a/index.html
+++ b/index.html
@@ -1,15 +1,270 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html>
 
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>select best five</title>
+    <title>select-best-five</title>
+    <link rel="stylesheet" href="style.css">
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        clifford: '#da373d',
+                    }
+                }
+            }
+        }
+    </script>
 </head>
 
-<body>
-    <h1>Slected best Five football player</h1>
+
+
+<body class="bg-gray-800">
+    <header class="bg-black pb-32 pt-12">
+
+
+        <section class="flex header-section">
+            <div class="mt-28">
+                <img src="images/header/mbappe.png" alt="">
+            </div>
+            <div>
+                <div class="px-20">
+                    <h1 class="text-white text-6xl text-center">Select Your Best Five</h1>
+                    <p class="text-white pt-12 text-center ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                        Repellendus totam
+                        similique consequuntur
+                        magni ratione accusamus quisquam repudiandae distinctio ex. Dolorem magnam porro voluptatum
+                        voluptatem blanditiis voluptates. Quod ad neque est laudantium, culpa temporibus alias ea eaque
+                        id
+                        ex aut voluptatum?</p>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="images/header/psg.png" alt="">
+                    <img src="images/header/messi_psg.png" alt="">
+                </div>
+                <div><img src="images/header/soccer-goal-top-png-8 4.png" alt=""></div>
+            </div>
+
+        </section>
+
+    </header>
+
+
+    <main class="flex justify-around mt-28">
+        <div class="">
+            <div class="flex gap-5 pb-2">
+                <!-- card 01 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 02 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 03 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="flex gap-5 py-2">
+                <!-- card 04 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 05 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 06 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="flex gap-5 py-2">
+                <!-- card 07 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 08 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 09 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Lionel
+                            Messi</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            36 Goals • 120 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <!-- Selected top Five -->
+            <!--  -->
+            <section class="bg-black w-72 h-96 rounded-lg">
+                <h4 class="text-3xl text-white text-center py-4">Selected -V</h4>
+            </section>
+
+
+            <!-- Budget calculation field -->
+            <section class="bg-black w-72 h-auto rounded-lg mt-4">
+                <div class="p-3.5 ">
+                    <h4 class="text-3xl text-white text-center py-4">Budget</h4>
+                    <div class="text-white flex justify-between my-4">
+                        <p>Per Player</p>
+                        <input class="border-blue text-black" type="text">
+                    </div>
+
+                    <button type="button"
+                        class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
+                        Top
+                    </button>
+
+                    <div class="text-white flex justify-between my-4">
+                        <p>Player Expenses</p>
+                        <p>$<span>00</span></p>
+                    </div>
+
+                    <div class="text-white flex justify-between my-4">
+                        <p>Manager</p>
+                        <input class="border-blue text-black" type="text">
+                    </div>
+
+                    <div class="text-white flex justify-between my-4">
+                        <p>Coach</p>
+                        <input class="border-blue text-black" type="text">
+                    </div>
+                    <button type="button"
+                        class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
+                        Total </button>
+                    <div class="text-white flex justify-between my-4">
+                        <p>Total</p>
+                        <p class="text-orange-500">$<span>00</span></p>
+                    </div>
+                </div>
+            </section>
+        </div>
+    </main>
 </body>
 
 </html>
