modified card section

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <title>select-best-five</title>
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
@@ -21,42 +24,32 @@
 </head>
 
 
+<!-- body Section -->
 
 <body class="bg-gray-800">
+    <!-- header section  -->
     <header class="bg-black pb-32 pt-12">
-
-
         <section class="flex header-section">
-            <div class="mt-28">
+            <div class="header-image">
                 <img src="images/header/mbappe.png" alt="">
             </div>
-            <div>
-                <div class="px-20">
-                    <h1 class="text-white text-6xl text-center">Select Your Best Five</h1>
-                    <p class="text-white pt-12 text-center ">Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Repellendus totam
-                        similique consequuntur
-                        magni ratione accusamus quisquam repudiandae distinctio ex. Dolorem magnam porro voluptatum
-                        voluptatem blanditiis voluptates. Quod ad neque est laudantium, culpa temporibus alias ea eaque
-                        id
-                        ex aut voluptatum?</p>
-                </div>
+            <div class="px-20">
+                <h1 class="text-orange-500 text-6xl text-center">Best football players in the world ranked 2022</h1>
+                <p class="text-gray-100 text-xl pt-12 text-center ">Who is the best football player in the world?
+                    The answer
+                    will never be agreed upon, it will never be fully settled, it will never be definitively
+                    decided.</p>
             </div>
-            <div>
-                <div>
-                    <img src="images/header/psg.png" alt="">
-                    <img src="images/header/messi_psg.png" alt="">
-                </div>
-                <div><img src="images/header/soccer-goal-top-png-8 4.png" alt=""></div>
+            <div class="football-image">
+                <img src="images/header/soccer-goal-top-png-8 4.png" alt="">
             </div>
-
         </section>
-
     </header>
 
 
-    <main class="flex justify-around mt-28">
-        <div class="">
+    <main class="flex justify-around my-28">
+        <!-- card section start  -->
+        <div>
             <div class="flex gap-5 pb-2">
                 <!-- card 01 -->
                 <div
@@ -79,14 +72,13 @@
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                        <img class="rounded-t-lg w-full" src="images/cards/neimar.png" alt="" />
                     </a>
                     <div class="p-6">
                         <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
+                            Neymar Jr.</h5>
                         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
+                            30 Goals • 110 Assist
                         </p>
                         <button type="button"
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
@@ -96,14 +88,13 @@
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                        <img class="rounded-t-lg w-full" src="images/cards/mbappe.png" alt="" />
                     </a>
                     <div class="p-6">
                         <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
+                            Kylian Mbappé</h5>
                         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
+                            20 Goals • 110 Assist
                         </p>
                         <button type="button"
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
@@ -115,14 +106,13 @@
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                        <img class="rounded-t-lg w-full" src="images/cards/ramos.png" alt="" />
                     </a>
                     <div class="p-6">
                         <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
+                            Sergio Ramos</h5>
                         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
+                            10 Goals • 50 Assist
                         </p>
                         <button type="button"
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
@@ -132,14 +122,13 @@
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                        <img class="rounded-t-lg w-full" src="images/cards/ranato.png" alt="" />
                     </a>
                     <div class="p-6">
                         <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
+                            Renato Sanches</h5>
                         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
+                            14 Goals • 40 Assist
                         </p>
                         <button type="button"
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
@@ -149,14 +138,13 @@
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
+                        <img class="rounded-t-lg w-full" src="images/cards/victor.png" alt="" />
                     </a>
                     <div class="p-6">
                         <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
+                            Victor Hugo</h5>
                         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
+                            3 Goals • 12 Assist
                         </p>
                         <button type="button"
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
@@ -217,10 +205,11 @@
                 </div>
             </div>
         </div>
+        <!-- card section end  -->
 
+        <!-- calculation part start  -->
         <div>
             <!-- Selected top Five -->
-            <!--  -->
             <section class="bg-black w-72 h-96 rounded-lg">
                 <h4 class="text-3xl text-white text-center py-4">Selected -V</h4>
             </section>
@@ -236,8 +225,7 @@
                     </div>
 
                     <button type="button"
-                        class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
-                        Top
+                        class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
                     </button>
 
                     <div class="text-white flex justify-between my-4">
@@ -256,7 +244,7 @@
                     </div>
                     <button type="button"
                         class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
-                        Total </button>
+                        Total</button>
                     <div class="text-white flex justify-between my-4">
                         <p>Total</p>
                         <p class="text-orange-500">$<span>00</span></p>
@@ -264,7 +252,12 @@
                 </div>
             </section>
         </div>
+        <!-- calculation part start  -->
     </main>
+    <footer class="">
+        <hr class="color-orange-400 w-full py-2">
+        <p class="text-white text-center py-5 mb-3">Copyright @ 2022 All Rights Reserved.</p>
+    </footer>
 </body>
 
 </html>
