--- a/index.html
+++ b/index.html
@@ -210,22 +210,22 @@
         <!-- calculation part start  -->
         <div>
             <!-- Selected top Five -->
-            <section class="bg-black w-72 h-96 rounded-lg">
+            <section class="bg-black w-80 h-96 rounded-lg">
                 <h4 class="text-3xl text-white text-center py-4">Selected -V</h4>
             </section>
 
 
             <!-- Budget calculation field -->
-            <section class="bg-black w-72 h-auto rounded-lg mt-4">
-                <div class="p-3.5 ">
+            <section class="bg-black w-80 h-auto rounded-lg mt-4">
+                <div class="p-4 text-center">
                     <h4 class="text-3xl text-white text-center py-4">Budget</h4>
                     <div class="text-white flex justify-between my-4">
                         <p>Per Player</p>
-                        <input class="border-blue text-black" type="text">
+                        <input class="text-white bg-black py-1 custom" type="text">
                     </div>
 
                     <button type="button"
-                        class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
+                        class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
                     </button>
 
                     <div class="text-white flex justify-between my-4">
@@ -235,16 +235,16 @@
 
                     <div class="text-white flex justify-between my-4">
                         <p>Manager</p>
-                        <input class="border-blue text-black" type="text">
+                        <input class="text-white bg-black py-1 custom" type="text">
                     </div>
 
                     <div class="text-white flex justify-between my-4">
                         <p>Coach</p>
-                        <input class="border-blue text-black" type="text">
+                        <input class="text-white bg-black py-1 custom" type="text">
                     </div>
                     <button type="button"
-                        class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
-                        Total</button>
+                        class="inline-block px-16 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Total
+                        Calculate</button>
                     <div class="text-white flex justify-between my-4">
                         <p>Total</p>
                         <p class="text-orange-500">$<span>00</span></p>
