page design completed

--- a/index.html
+++ b/index.html
@@ -106,6 +106,56 @@
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/ronaldo.jpg" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Cr. Ronaldo</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            35 Goals • 115 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 05 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/robert.jfif" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            R. Lewandowski</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            30 Goals • 110 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+                <!-- card 06 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
+                        <img class="rounded-t-lg w-full" src="images/cards/dmaria.jpg" alt="" />
+                    </a>
+                    <div class="p-6">
+                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
+                            Ángel Di María</h5>
+                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
+                            22 Goals • 90 Assist
+                        </p>
+                        <button type="button"
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                    </div>
+                </div>
+            </div>
+            <div class="flex gap-5 py-2">
+                <!-- card 07 -->
+                <div
+                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                    <a href="#!">
                         <img class="rounded-t-lg w-full" src="images/cards/ramos.png" alt="" />
                     </a>
                     <div class="p-6">
@@ -118,7 +168,7 @@
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
                     </div>
                 </div>
-                <!-- card 05 -->
+                <!-- card 08 -->
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
@@ -134,7 +184,7 @@
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
                     </div>
                 </div>
-                <!-- card 06 -->
+                <!-- card 09 -->
                 <div
                     class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
                     <a href="#!">
@@ -145,59 +195,6 @@
                             Victor Hugo</h5>
                         <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
                             3 Goals • 12 Assist
-                        </p>
-                        <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
-                    </div>
-                </div>
-            </div>
-            <div class="flex gap-5 py-2">
-                <!-- card 07 -->
-                <div
-                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
-                    </a>
-                    <div class="p-6">
-                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
-                        </p>
-                        <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
-                    </div>
-                </div>
-                <!-- card 08 -->
-                <div
-                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
-                    </a>
-                    <div class="p-6">
-                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
-                        </p>
-                        <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
-                    </div>
-                </div>
-                <!-- card 09 -->
-                <div
-                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
-                    <a href="#!">
-                        <img class="rounded-t-lg w-full" src="images/cards/messi.png" alt="" />
-                    </a>
-                    <div class="p-6">
-                        <h5 class="mb-2 text-4xl font-bold tracking-tight text-gray-900 dark:text-white text-center">
-                            Lionel
-                            Messi</h5>
-                        <p class="mb-3 font-normal text-gray-700 dark:text-gray-400 text-center">
-                            36 Goals • 120 Assist
                         </p>
                         <button type="button"
                             class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
