--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
     </script>
 </head>
 
-
 <!-- body Section -->
 
 <body class="bg-gray-800">
@@ -209,13 +208,15 @@
             <!-- Selected top Five -->
             <section class="bg-black w-80 h-96 rounded-lg">
                 <h4 class="text-3xl text-white text-center py-4">Selected -V</h4>
-            </section>
+                <hr class="pb-2">
 
+            </section>
 
             <!-- Budget calculation field -->
             <section class="bg-black w-80 h-auto rounded-lg mt-4">
+                <h4 class="text-3xl text-white text-center py-4">Budget</h4>
+                <hr class="pb-2">
                 <div class="p-4 text-center">
-                    <h4 class="text-3xl text-white text-center py-4">Budget</h4>
                     <div class="text-white flex justify-between my-4">
                         <p>Per Player</p>
                         <input class="text-white bg-black py-1 custom" type="text">
@@ -249,8 +250,11 @@
                 </div>
             </section>
         </div>
-        <!-- calculation part start  -->
+
+        <!-- calculation part end  -->
     </main>
+
+    <!-- footer section  -->
     <footer class="">
         <hr class="color-orange-400 w-full py-2">
         <p class="text-white text-center py-5 mb-3">Copyright @ 2022 All Rights Reserved.</p>
