--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                             36 Goals • 120 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
                 <!-- card 02 -->
@@ -80,7 +81,8 @@
                             30 Goals • 110 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
                 <!-- card 03 -->
@@ -96,7 +98,8 @@
                             20 Goals • 110 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -114,7 +117,8 @@
                             35 Goals • 115 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
                 <!-- card 05 -->
@@ -130,7 +134,8 @@
                             30 Goals • 110 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
                 <!-- card 06 -->
@@ -146,7 +151,8 @@
                             22 Goals • 90 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -164,7 +170,8 @@
                             10 Goals • 50 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
                 <!-- card 08 -->
@@ -180,7 +187,8 @@
                             14 Goals • 40 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
                 <!-- card 09 -->
@@ -196,7 +204,8 @@
                             3 Goals • 12 Assist
                         </p>
                         <button type="button"
-                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">SELECT</button>
+                            class="inline-block px-24 py-2.5 bg-blue-600 text-white font-medium text-xl leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                            onclick="addToTop(this)">SELECT</button>
                     </div>
                 </div>
             </div>
@@ -209,6 +218,16 @@
             <section class="bg-black w-80 h-96 rounded-lg">
                 <h4 class="text-3xl text-white text-center py-4">Selected -V</h4>
                 <hr class="pb-2">
+                <div class="p-10">
+                    <table class="w-full">
+                        <tbody id="top-players">
+                            <!-- <tr class="text-white">
+                                <th>1.</th>
+                                <td>Mithun</td> -->
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
 
             </section>
 
@@ -259,6 +278,9 @@
         <hr class="color-orange-400 w-full py-2">
         <p class="text-white text-center py-5 mb-3">Copyright @ 2022 All Rights Reserved.</p>
     </footer>
+
+    <script src="js/select.js"></script>
+    <script src="js/budget.js"></script>
 </body>
 
 </html>
