--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
                     </div>
                 </div>
                 <!-- card 02 -->
-                <div
-                    class="max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800 dark:border-gray-700">
+                <div class=" max-w-sm bg-white rounded-lg border border-gray-200 shadow-md dark:bg-gray-800
+                            dark:border-gray-700">
                     <a href="#!">
                         <img class="rounded-t-lg w-full" src="images/cards/neimar.png" alt="" />
                     </a>
@@ -238,16 +238,16 @@
                 <div class="p-4 text-center">
                     <div class="text-white flex justify-between my-4">
                         <p>Per Player</p>
-                        <input class="text-white bg-black py-1 custom" type="text">
+                        <input id="per-player-cost-field" class="text-white bg-black py-1 custom" type="text">
                     </div>
 
-                    <button type="button"
+                    <button id="btn-calculate" type="button"
                         class="inline-block px-20 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Calculate
                     </button>
 
                     <div class="text-white flex justify-between my-4">
                         <p>Player Expenses</p>
-                        <p>$<span>00</span></p>
+                        <p>$<span id="player-expenses">00</span></p>
                     </div>
 
                     <div class="text-white flex justify-between my-4">
