calculation part completed

--- a/index.html
+++ b/index.html
@@ -252,19 +252,19 @@
 
                     <div class="text-white flex justify-between my-4">
                         <p>Manager</p>
-                        <input class="text-white bg-black py-1 custom" type="text">
+                        <input id="manager-input-field" class="text-white bg-black py-1 custom" type="text">
                     </div>
 
                     <div class="text-white flex justify-between my-4">
                         <p>Coach</p>
-                        <input class="text-white bg-black py-1 custom" type="text">
+                        <input id="coach-input-field" class="text-white bg-black py-1 custom" type="text">
                     </div>
-                    <button type="button"
+                    <button id="btn-total-calculate" type="button"
                         class="inline-block px-16 py-2.5 bg-blue-600 text-white font-medium text-lg leading-tight rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out my-4 w-100">Total
                         Calculate</button>
                     <div class="text-white flex justify-between my-4">
                         <p>Total</p>
-                        <p class="text-orange-500">$<span>00</span></p>
+                        <p class="text-orange-500">$<span id="total-calculate">00</span></p>
                     </div>
                 </div>
             </section>
